--- a/src/app/pages/book/book.component.scss
+++ b/src/app/pages/book/book.component.scss
@@ -19,4 +19,12 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
+
+  .c-width {
+    width: 50%;
+
+    @media screen and (min-width: 768px) {
+      width: 25%;
+    }
+  }
 }
